Include app.js in index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ p {
 <p id="demo"></p>
 <p>You rock my love &#128029</p>
 
+<script src="app.js"></script>
 <script>
 // Set the date we're counting down to
 var countDownDate = new Date("Oct 06, 2021 18:00:00").getTime(); // original "Jan 30, 2021 15:37:25"
